--- a/index.html
+++ b/index.html
@@ -36,4 +36,6 @@ Old Coding
   <p><a href="https://www.seqrite.com/data-privacy">Powered by Seqrite</a></p>
 </body>
 </html>
-
+  <link rel="stylesheet" href="seqrite-config.css"/>
+  <script data-config="seqriteConfig" type="application/javascript" src="seqrite.js"></script>
+  <script type="application/javascript" src="seqrite-config.js"></script>
